--- a/mayagupta.html
+++ b/mayagupta.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="max-image-preview:large">
     <title>Your Hot girl Here | Watch If You are single</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="mystyle.css"> <!-- Ensure mystyle.css comes after Bootstrap -->
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <style type="text/css">
 	body {
 		background-color: black;
@@ -128,20 +128,20 @@
 </head>
 <body>
     <header class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="http://enfomart.ink/luReU">HOTTEST GIRL HERE</a>
+    <a class="navbar-brand" href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">HOTTEST GIRL HERE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color:red;">
         <span class="navbar-toggler-icon" style="color: red;"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="http://enfomart.ink/luReU">Home</a>
+                <a class="nav-link" href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://enfomart.ink/luReU">Today Videos</a>
+                <a class="nav-link" href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">Today Videos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://enfomart.ink/luReU">Viral Videos</a>
+                <a class="nav-link" href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">Viral Videos</a>
             </li>
         </ul>
     </div>
@@ -157,14 +157,14 @@
                     <h1>Call Arabian Girls</h1>
                     <h5>If you want to Call me <span style="color: red;">By Answering</span>  all 6 questions from here.</h5>
                     <div class="play-button">
-                        <center><a href="http://enfomart.ink/luReU" class="button-like-link">Call Me By Answering Questions</a></center>
+                        <center><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" class="button-like-link">Call Me By Answering Questions</a></center>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="umg">
                     <figure >
-                        <a href="http://enfomart.ink/luReU"><img style="height: 450px; width: 400px; margin: 0 auto;" src="https://i.pinimg.com/564x/ae/89/9d/ae899d458f76c0d6032a03bba9eb1e0f.jpg" alt="Arab Girls" class="img-fluid"></a>
+                        <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><img style="height: 450px; width: 400px; margin: 0 auto;" src="https://i.pinimg.com/564x/ae/89/9d/ae899d458f76c0d6032a03bba9eb1e0f.jpg" alt="Arab Girls" class="img-fluid"></a>
                     </figure>
                 </div>
             </div>
@@ -178,19 +178,19 @@
     <p><strong>Watch everyone in the video below</strong></p></div></center><div class="divider"></div>
     <div class="row ahare">
         <div class="col-md-3">
-            <a href="http://enfomart.ink/luReU"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/b3/f3/96/b3f396135f720dd7ea94a09732add140.jpg" alt="Sexy Girl" class="img-fluid"></figure>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/b3/f3/96/b3f396135f720dd7ea94a09732add140.jpg" alt="Sexy Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Solo*Girl</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="http://enfomart.ink/luReU"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/2b/b4/ef/2bb4ef93acbd2d30b1560f94215d11c8.jpg" alt="Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/2b/b4/ef/2bb4ef93acbd2d30b1560f94215d11c8.jpg" alt="Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Hor*ny</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="http://enfomart.ink/luReU"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/50/d5/5f/50d55f99c3e5d33ce921fba9cf8c127f.jpg" alt="Very Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/50/d5/5f/50d55f99c3e5d33ce921fba9cf8c127f.jpg" alt="Very Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Lu*bed</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="http://enfomart.ink/luReU"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/16/f2/f5/16f2f5bd1bf1df35cd0a44c9c4f090c0.jpg" alt="Ultra Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/16/f2/f5/16f2f5bd1bf1df35cd0a44c9c4f090c0.jpg" alt="Ultra Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Les*bian</a></h2></center>
         </div>
     </div>
@@ -201,7 +201,7 @@
             <center><h2>More Horny Videos</h2></center><div class="divider"></div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="review"><a href="http://enfomart.ink/luReU">
+                    <div class="review"><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">
                         <figure><img style="height: 400px; width: 300px;" src="https://m.media-amazon.com/images/I/41GzI9pKA5L.jpg" alt="Mi*lf Girls" class="img-fluid"></figure>
                         <div>
                             <h3>Hor*ny Mi*lf</h3>
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="review"><a href="http://enfomart.ink/luReU">
+                    <div class="review"><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">
                         <figure><img style="height: 400px; width: 500px;" src="https://people.com/thmb/9X0J2IwoAOkJACJu5HuAHnuCly0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(399x0:401x2)/fergie-milf-800-b558b752052f49c49bdba2234970c4f8.jpg" alt="Virgin 18 Years Old" class="img-fluid"></figure>
                         <div>
                             <h3>Bathing Video</h3>
