--- a/mayagupta.html
+++ b/mayagupta.html
@@ -149,15 +149,15 @@
 
 
     <main class="container">
-        <section class="video-section text-center" style="margin-top: 20px;">
+       <section class="video-section text-center" style="margin-top: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <div class="aha">
-                    <h1>Call Arabian Girls</h1>
-                    <h5>If you want to Call me <span style="color: red;">By Answering</span>  all 6 questions from here.</h5>
+                    <h1>Arabian Girls Videos</h1>
+                    <h5>If you want to watch my <span style="color: red;">latest</span> video, click the "Play Video" button</h5>
                     <div class="play-button">
-                        <center><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" class="button-like-link">Call Me By Answering Questions</a></center>
+                        <center><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" class="button-like-link">Play Video</a></center>
                     </div>
                 </div>
             </div>
