--- a/mayagupta.html
+++ b/mayagupta.html
@@ -7,6 +7,7 @@
     <title>Your Hot girl Here | Watch If You are single</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="mystyle.css">
+	<link rel="icon" type="image/x-icon" href="https://static.vecteezy.com/system/resources/previews/005/476/277/non_2x/under-18-forbidden-round-icon-sign-illustration-eighteen-or-older-persons-adult-content-18-plus-only-rating-isolated-on-white-background-free-vector.jpg">
 <style type="text/css">
 	body {
 		background-color: black;
@@ -147,7 +148,7 @@
     </div>
 </header>
 
-
+<a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">
     <main class="container">
        <section class="video-section text-center" style="margin-top: 20px;">
     <div class="container">
@@ -223,7 +224,7 @@
                 </div>
             </div>
         </section><div class="divider"></div>
-    </main>
+    </main></a>
         <footer>
         &copy; 2023 HOT GIRLS. All rights reserved.
     </footer>
