--- a/leakedccgen/index.html
+++ b/leakedccgen/index.html
@@ -22,7 +22,7 @@
 <body>
  
 <div id="app">
-    <nav class="navigations"><font color="white" height="40" style=bold>Revolucion Online Cc-gen</font></nav>
+    <nav class="navigations"><font color="white" height="40" style=bold>Leaked CC-GEN</font></nav>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
