--- a/leakedccgen/index.html
+++ b/leakedccgen/index.html
@@ -37,7 +37,7 @@
  
     </div>
  
- <center> @2023 </br> Forum <a href="https://t.me/leaked_method">Leaked Method</a> </center>
+ <center> @2023<a href="https://t.me/leaked_method">Leaked Method</a> </center>
         </p></div></div>
 </div>
    <script language="javascript" src="https://anon5ec.github.io/NAMSO-GEN-2020/gen-backend.js"></script>
