--- a/mayagupta.html
+++ b/mayagupta.html
@@ -49,7 +49,7 @@
             <div class="col-md-6">
                 <div class="umg">
                     <figure >
-                        <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><img style="height: 450px; width: 400px; margin: 0 auto;" src="https://i.pinimg.com/564x/ae/89/9d/ae899d458f76c0d6032a03bba9eb1e0f.jpg" alt="Arab Girls" class="img-fluid"></a>
+                        <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><img style="height: 450px; width: 400px; margin: 0 auto;" src="https://winforfree.github.io/index/adsterrapic/1.png" alt="Arab Girls" class="img-fluid"></a>
                     </figure>
                 </div>
             </div>
@@ -63,19 +63,19 @@
     <p><strong>Watch everyone in the video below</strong></p></div></center><div class="divider"></div>
     <div class="row ahare">
         <div class="col-md-3">
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/b3/f3/96/b3f396135f720dd7ea94a09732add140.jpg" alt="Sexy Girl" class="img-fluid"></figure>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/2.png" alt="Sexy Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Solo*Girl</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/2b/b4/ef/2bb4ef93acbd2d30b1560f94215d11c8.jpg" alt="Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/3.png" alt="Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Hor*ny</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/50/d5/5f/50d55f99c3e5d33ce921fba9cf8c127f.jpg" alt="Very Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/4.png" alt="Very Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Lu*bed</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://i.pinimg.com/564x/16/f2/f5/16f2f5bd1bf1df35cd0a44c9c4f090c0.jpg" alt="Ultra Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/5.png" alt="Ultra Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Les*bian</a></h2></center>
         </div>
     </div>
@@ -87,7 +87,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="review"><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">
-                        <figure><img style="height: 400px; width: 300px;" src="https://m.media-amazon.com/images/I/41GzI9pKA5L.jpg" alt="Mi*lf Girls" class="img-fluid"></figure>
+                        <figure><img style="height: 400px; width: 300px;" src="https://winforfree.github.io/index/adsterrapic/6.png" alt="Mi*lf Girls" class="img-fluid"></figure>
                         <div>
                             <h3>Hor*ny Mi*lf</h3>
                             <p>Watch full video of her without any premium subscription click here.</p>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="review"><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">
-                        <figure><img style="height: 400px; width: 500px;" src="https://people.com/thmb/9X0J2IwoAOkJACJu5HuAHnuCly0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(399x0:401x2)/fergie-milf-800-b558b752052f49c49bdba2234970c4f8.jpg" alt="Virgin 18 Years Old" class="img-fluid"></figure>
+                        <figure><img style="height: 400px; width: 500px;" src="https://winforfree.github.io/index/adsterrapic/7.png" alt="Virgin 18 Years Old" class="img-fluid"></figure>
                         <div>
                             <h3>Bathing Video</h3>
                             <p>Watch full video of her without any premium subscription click here.</p>
