--- a/gayapatel.html
+++ b/gayapatel.html
@@ -13,26 +13,26 @@
 </head>
 <body>
     <header class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">HOTTEST GIRL HERE</a>
+    <a class="navbar-brand" href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de">HOTTEST GIRL HERE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color:red;">
         <span class="navbar-toggler-icon" style="color: red;"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">Home</a>
+                <a class="nav-link" href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">Today Videos</a>
+                <a class="nav-link" href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de">Today Videos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">Viral Videos</a>
+                <a class="nav-link" href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de">Viral Videos</a>
             </li>
         </ul>
     </div>
 </header>
 
-<a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">
+<a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de">
     <main class="container">
        <section class="video-section text-center" style="margin-top: 20px;">
     <div class="container">
@@ -42,14 +42,14 @@
                     <h1>Arabian Girls Videos</h1>
                     <h5>If you want to watch my <span style="color: red;">latest</span> video, click the "Play Video" button</h5>
                     <div class="play-button">
-                        <center><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" class="button-like-link">Play Video</a></center>
+                        <center><a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de" class="button-like-link">Play Video</a></center>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="umg">
                     <figure >
-                        <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><img style="height: 450px; width: 400px; margin: 0 auto;" src="https://winforfree.github.io/index/adsterrapic/1.png" alt="Arab Girls" class="img-fluid"></a>
+                        <a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de"><img style="height: 450px; width: 400px; margin: 0 auto;" src="https://winforfree.github.io/index/adsterrapic/1.png" alt="Arab Girls" class="img-fluid"></a>
                     </figure>
                 </div>
             </div>
@@ -63,19 +63,19 @@
     <p><strong>Watch everyone in the video below</strong></p></div></center><div class="divider"></div>
     <div class="row ahare">
         <div class="col-md-3">
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/2.png" alt="Sexy Girl" class="img-fluid"></figure>
+            <a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/2.png" alt="Sexy Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Solo*Girl</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/3.png" alt="Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/3.png" alt="Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Hor*ny</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/4.png" alt="Very Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/4.png" alt="Very Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Lu*bed</a></h2></center>
         </div>
         <div class="col-md-3">
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/5.png" alt="Ultra Hot Girl" class="img-fluid"></figure>
+            <a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de"><figure><img style="height: 400px; width: 400px;" src="https://winforfree.github.io/index/adsterrapic/5.png" alt="Ultra Hot Girl" class="img-fluid"></figure>
             <center><h2 class="button-like-link1">Les*bian</a></h2></center>
         </div>
     </div>
@@ -86,7 +86,7 @@
             <center><h2>More Horny Videos</h2></center><div class="divider"></div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="review"><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">
+                    <div class="review"><a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de">
                         <figure><img style="height: 400px; width: 300px;" src="https://winforfree.github.io/index/adsterrapic/6.png" alt="Mi*lf Girls" class="img-fluid"></figure>
                         <div>
                             <h3>Hor*ny Mi*lf</h3>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="review"><a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d">
+                    <div class="review"><a href="https://www.toprevenuegate.com/hbrvsqtzb?key=14e31fb1e0241a05283cfca9e58006de">
                         <figure><img style="height: 400px; width: 500px;" src="https://winforfree.github.io/index/adsterrapic/7.png" alt="Virgin 18 Years Old" class="img-fluid"></figure>
                         <div>
                             <h3>Bathing Video</h3>
