--- a/mayagupta.html
+++ b/mayagupta.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="max-image-preview:large">
+	<meta property="og:image" content="https://i.ibb.co/r0xmdHB/image.png">
     <title>Your Hot girl Here | Watch If You are single</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="mystyle.css">
