--- a/redirect/index.html
+++ b/redirect/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="refresh" content="0;url=https://hot.d-d.pw/mayagupta.html">
     <title>Your Hotty...</title>
     <meta property="og:image" content="https://hot.d-d.pw/adsterrapic/1.png">
+    <meta property="og:title" content="Video here">
+    <meta property="og:description" content="#viral #Video">
+    <meta property="og:url" content="facebook.com">
+    <meta property="og:type" content="website">
 </head>
 <body>
 </body>
